Begin square shaped pattern for projects

--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -3,7 +3,7 @@
   <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent2" aria-controls="navbarSupportedContent2" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent2">
+  <div class="collapse navbar-collapse text-center" id="navbarSupportedContent2">
     <ul class="navbar-nav mr-auto">
     </ul>
     <ul class="navbar-nav navbar-right mr-2">
