--- a/sass/styles/header.scss
+++ b/sass/styles/header.scss
@@ -1,8 +1,6 @@
-
-
 .global-title {
   font-size: 85px;
-  line-height: 0.8em;
+  line-height: 1.2em;
   font-weight: 600;
   text-align: left;
   background: url('https://images.pexels.com/photos/1616403/pexels-photo-1616403.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
@@ -12,13 +10,20 @@
   color: rgba(255, 255, 255, 0);
   background-size: cover;
   text-shadow: 0 0 rgba(0, 0, 0, .06);
+  @media screen and (min-width: map-get($break-points, 'small')) {
+    font-size: 100px;
+    line-height: 1.1em;
+  }
   @media screen and (min-width: map-get($break-points, 'medium')) {
     font-size: 125px;
+    line-height: 1em;
   }
   @media screen and (min-width: map-get($break-points, 'large')) {
     font-size: 175px;
+    line-height: 0.9em;
   }
   @media screen and (min-width: map-get($break-points, 'extra-large')) {
     font-size: 200px;
+    line-height: 0.8em;
   }
 }
