--- a/css/style.scss/main.css
+++ b/css/style.scss/main.css
@@ -7348,9 +7348,6 @@ a.text-github:hover, a.text-github:focus {
 body {
   font-family: 'Montserrat', sans-serif; }
 
-html {
-  scroll-behavior: smooth; }
-
 .global-title {
   font-size: 85px;
   line-height: 1.2em;
@@ -7392,37 +7389,11 @@ html {
   display: flex;
   justify-content: center;
   align-items: stretch;
-  box-sizing: border-box;
-  position: relative; }
+  box-sizing: border-box; }
   .project-cell:before {
     content: '';
     display: table;
     padding-top: 100%; }
-  .project-cell .overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-transition: ease all 0.6s;
-    transition: ease all 0.6s; }
-  .project-cell .logo {
-    opacity: 0;
-    position: absolute;
-    width: 75%;
-    height: 75%;
-    top: 50%;
-    left: 50%;
-    background-size: contain;
-    background-position: center center;
-    background-repeat: no-repeat;
-    transform: translate(-50%, -50%);
-    -webkit-transition: ease all 0.6s;
-    transition: ease all 0.6s; }
-  .project-cell .invert {
-    filter: invert(1); }
-  .project-cell:hover .overlay {
-    background-color: rgba(0, 0, 0, 0.5); }
-  .project-cell:hover .logo {
-    opacity: 1; }
   .project-cell .project {
     flex-grow: 1;
     background-size: cover;
@@ -7431,7 +7402,3 @@ html {
     display: flex;
     justify-content: center;
     align-items: center; }
-    .project-cell .project.quickgradient {
-      background: #2980b9;
-      background: -webkit-linear-gradient(to bottom, #2980b9, #6dd5fa);
-      background: linear-gradient(to bottom, #2980b9, #6dd5fa); }
