--- a/sass/components/_projectcard.scss
+++ b/sass/components/_projectcard.scss
@@ -4,18 +4,54 @@
   justify-content: center;
   align-items: stretch;
   box-sizing: border-box;
+  position: relative;
   &:before {
     content: '';
     display: table;
     padding-top: 100%;
   }
+  .overlay{
+    position: absolute;
+    width:  100%;
+    height:  100%;
+    -webkit-transition: ease all 0.6s;
+    transition: ease all 0.6s;
+  }
+  .logo {
+    opacity: 0;
+    position: absolute;
+    width: 75%;
+    height: 75%;
+    top: 50%;
+    left: 50%;
+    background-size: contain;
+    background-position: center center;
+    background-repeat: no-repeat;
+    transform: translate(-50%, -50%);
+    -webkit-transition: ease all 0.6s;
+    transition: ease all 0.6s;
+  }
+  .invert {
+    filter: invert(1);
+  }
+  &:hover .overlay {
+    background-color:rgba(0,0,0,0.5);
+  }
+  &:hover .logo {
+    opacity: 1;
+  }
   .project {
     flex-grow: 1;
-    border: 1px solid black;
-    background: tomato;
-    color: white;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
+    &.quickgradient {
+      background: rgba(41,128,185,1);
+      background: -webkit-linear-gradient(to bottom,rgba(41,128,185,1),rgba(109,213,250,1));
+      background: linear-gradient(to bottom,rgba(41,128,185,1),rgba(109,213,250,1));   
+    }
   }
 }
