--- a/css/style.css
+++ b/css/style.css
@@ -7405,7 +7405,6 @@ html {
     -webkit-transition: ease all 0.6s;
     transition: ease all 0.6s; }
   .project-cell .logo {
-    opacity: 0;
     position: absolute;
     width: 75%;
     height: 75%;
@@ -7419,9 +7418,9 @@ html {
     transition: ease all 0.6s; }
   .project-cell .invert {
     filter: invert(1); }
-  .project-cell:hover .overlay {
-    background-color: rgba(0, 0, 0, 0.5); }
-  .project-cell:hover .logo {
+  .project-cell .overlay {
+    background-color: rgba(0, 0, 0, 0.3); }
+  .project-cell .logo {
     opacity: 1; }
   .project-cell .project {
     flex-grow: 1;
