--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -7,8 +7,8 @@
     <ul class="navbar-nav mr-auto">
     </ul>
     <ul class="navbar-nav navbar-right mr-2">
-      <li class="nav-item active my-auto mx-3">
-        <a class="nav-link text-primary" href="#">Projects</a>
+      <li class="nav-item my-auto mx-3">
+        <a class="nav-link text-dark" href="#">Projects</a>
       </li>
       <li class="nav-item my-auto mx-3">
         <a class="nav-link text-dark" href="#">Resume</a>
