--- a/css/style.css
+++ b/css/style.css
@@ -7359,6 +7359,7 @@ html {
   background: url("https://images.pexels.com/photos/1616403/pexels-photo-1616403.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
   background-repeat: no-repeat;
   background-clip: text;
+  background-attachment: fixed;
   -webkit-background-clip: text;
   color: rgba(255, 255, 255, 0);
   background-size: cover;
@@ -7379,6 +7380,21 @@ html {
     .global-title {
       font-size: 200px;
       line-height: 0.8em; } }
+
+.sub-title {
+  font-size: 18px; }
+  @media screen and (min-width: 576px) {
+    .sub-title {
+      font-size: 20px; } }
+  @media screen and (min-width: 768px) {
+    .sub-title {
+      font-size: 22px; } }
+  @media screen and (min-width: 992px) {
+    .sub-title {
+      font-size: 24px; } }
+  @media screen and (min-width: 1200px) {
+    .sub-title {
+      font-size: 26px; } }
 
 .custom-toggler.navbar-toggler:focus, .custom-toggler.navbar-toggler:active {
   outline: none;
@@ -7418,8 +7434,6 @@ html {
     transition: ease all 0.6s; }
   .project-cell .invert {
     filter: invert(1); }
-  .project-cell .overlay {
-    background-color: rgba(0, 0, 0, 0.3); }
   .project-cell .logo {
     opacity: 1; }
   .project-cell .project {
@@ -7434,3 +7448,9 @@ html {
       background: #2980b9;
       background: -webkit-linear-gradient(to bottom, #2980b9, #6dd5fa);
       background: linear-gradient(to bottom, #2980b9, #6dd5fa); }
+
+#deckplas .overlay, #tomsagebarbering .overlay {
+  background-color: rgba(0, 0, 0, 0.3); }
+
+#sitegen .overlay {
+  background-color: rgba(0, 0, 0, 0.8); }
