--- a/sass/components/_projectcard.scss
+++ b/sass/components/_projectcard.scss
@@ -34,9 +34,6 @@
   .invert {
     filter: invert(1);
   }
-  .overlay {
-    background-color:rgba(0,0,0,0.3);
-  }
   .logo {
     opacity: 1;
   }
@@ -53,5 +50,16 @@
       background: -webkit-linear-gradient(to bottom,rgba(41,128,185,1),rgba(109,213,250,1));
       background: linear-gradient(to bottom,rgba(41,128,185,1),rgba(109,213,250,1));   
     }
+  }
+}
+
+#deckplas, #tomsagebarbering {
+  .overlay {
+    background-color:rgba(0,0,0,0.3);
+  }
+}
+#sitegen {
+  .overlay {
+    background-color:rgba(0,0,0,0.8);
   }
 }
