--- a/sass/components/_projectcard.scss
+++ b/sass/components/_projectcard.scss
@@ -14,8 +14,6 @@
     position: absolute;
     width:  100%;
     height:  100%;
-    -webkit-transition: ease all 0.6s;
-    transition: ease all 0.6s;
   }
   .logo {
     // opacity: 0;
@@ -28,8 +26,12 @@
     background-position: center center;
     background-repeat: no-repeat;
     transform: translate(-50%, -50%);
-    -webkit-transition: ease all 0.6s;
-    transition: ease all 0.6s;
+    -webkit-transition: ease all 0.2s;
+    transition: ease all 0.2s;
+  }
+  &:hover .logo {
+    width: 80%;
+    height: 80%;
   }
   .invert {
     filter: invert(1);
@@ -51,15 +53,27 @@
       background: linear-gradient(to bottom,rgba(41,128,185,1),rgba(109,213,250,1));   
     }
   }
+  .links {
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    text-align: center;
+    h3 {
+      display: inline-block;
+    }
+  }
 }
 
 #deckplas, #tomsagebarbering {
   .overlay {
-    background-color:rgba(0,0,0,0.3);
+    background: rgba(0,0,0,0.2);
+    background: -webkit-linear-gradient(to bottom,rgba(0,0,0,0.2),rgba(0,0,0,0.4));
+    background: linear-gradient(to bottom,rgba(0,0,0,0.2),rgba(0,0,0,0.4));   
+    // background-color:rgba(0,0,0,0.2);
   }
 }
 #sitegen {
   .overlay {
-    background-color:rgba(0,0,0,0.8);
+    background-color:rgba(0,0,0,0.7);
   }
 }
