--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -8,21 +8,21 @@
     </ul>
     <ul class="navbar-nav navbar-right mr-2">
       <li class="nav-item my-auto mx-3">
-        <a class="nav-link text-dark" href="#">Projects</a>
+        <a class="nav-link text-dark" href="/#projects">Projects</a>
       </li>
       <li class="nav-item my-auto mx-3">
-        <a class="nav-link text-dark" href="#">Resume</a>
+        <a class="nav-link text-dark" href="../andrew_detorres_resume_2020.pdf" download>Resume</a>
       </li>
       <li class="nav-item my-auto mx-3">
-        <a class="nav-link text-dark" href="#">Contact</a>
+        <a class="nav-link text-dark" href="mailto:andrewdetorres999@gmail.com" target="_blank">Contact</a>
       </li>
       <li class="nav-item my-auto mx-lg-2 py-2 py-lg-0 px-3 px-md-0">
-        <a href="www.instagram.com/andythedeveloper">
+        <a href="https://www.instagram.com/andythedeveloper" target="_blank">
             <i class="fab fa-instagram text-dark pr-2"></i>
         </a>
       </li>
       <li class="nav-item my-auto mx-lg-2 py-2 py-lg-0 px-3 px-md-0">
-        <a href="github.com/andrewdetorres">
+        <a href="https://www.github.com/andrewdetorres" target="_blank">
             <i class="fab fa-github text-dark pr-2"></i>
         </a>
       </li>
